<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Timer</string>
    <string name="name">Name</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_alert_title">Delete task?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="background_selection">Select a background</string>
    <string name="thumbnail_selection">Select a thumbnail</string>
    <string name="enough_message">Let\'s call it a day</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop_alert_title">Stop task</string>
    <string name="stop">Stop</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continueLiteral">Continue</string>
    <string name="background_description">Select a background image to represent the task you are creating.</string>
    <string name="image_description">Now you have to select the image you\'ll see in the list of tasks. It can be part of the background or a completely different image.</string>
    <string name="image_selection">Select an image</string>
    <string name="crop_background">Crop background</string>
    <string name="thumbnail_description">And now the last image, the thumbnail. It will be used in notifications and in other features to come.</string>
    <string name="save">Save</string>
    <string name="modify_background">Modify background</string>
    <string name="image_mandatory">You must select an image before continuing</string>
</resources>