<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ntt_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.iridiobis.temporizador.presentation.ui.edittask.WriteTaskActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteOverlay">

        <ImageView
            android:id="@+id/ntt_thumbnail"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:adjustViewBounds="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ntt_crop_background"/>

        <TextView
            android:id="@+id/ntt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thumbnail_description"
            android:background="@color/colorAccent"
            android:textColor="@color/colorIcons"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/ntt_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/continueLiteral"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/ntt_select_thumbnail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/image_selection"
            style="@style/Button"
            app:layout_constraintBottom_toTopOf="@+id/ntt_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/ntt_crop_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/crop_background"
            style="@style/Button"
            app:layout_constraintBottom_toTopOf="@+id/ntt_select_thumbnail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
