<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.iridiobis.temporizador.presentation.ui.addTask.AddTaskActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_task_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_task_duration_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_task_name_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_task_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/duration"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/add_task_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Select a background"
        android:textColor="#fff"
        android:layout_below="@id/add_task_duration_container"
        android:background="@color/colorAccent" />
    <ImageView
        android:id="@+id/add_task_small_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_below="@id/add_task_background"/>

    <ImageView
        android:id="@+id/add_task_thumbnail"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:layout_below="@id/add_task_small_background"/>

    <Button
        android:id="@+id/add_task_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
